src/objects/TR1__UserSubscription__c.object
<CustomObject>
    <fields>
        <fullName>TR1__NumberOfSubscriptions__c</fullName>
        <label>Number Of Subscriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__UserId__c</fullName>
        <externalId>true</externalId>
        <label>UserId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Subscription</label>
    <nameField>
        <displayFormat>User-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>